// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Game Play > (1) Player 3658_Nate places tile [8E] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P3658_Nate | $6000 | [1I] [1F] [3D] [7I] | 
P5975_Joe | $6000 | [11H] [6D] [10H] [11I] [4D] | 

P3658_Nate [End Turn]
`;

exports[`Game Play > (2) Player 3658_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P3658_Nate | $6000 | [1I] [1F] [3D] [7I] [3C] | 
P5975_Joe | $6000 | [11H] [6D] [10H] [11I] [4D] | 

P5975_Joe [Choose Tile: [11H] [6D] [10H] [11I] [4D]]
`;

exports[`Game Play > (3) Player 5975_Joe places tile [10H] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P3658_Nate | $6000 | [1I] [1F] [3D] [7I] [3C] | 
P5975_Joe | $6000 | [11H] [6D] [11I] [4D] | 

P5975_Joe [End Turn]
`;

exports[`Game Play > (4) Player 5975_Joe ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P3658_Nate | $6000 | [1I] [1F] [3D] [7I] [3C] | 
P5975_Joe | $6000 | [11H] [6D] [11I] [4D] [12F] | 

P3658_Nate [Choose Tile: [1I] [1F] [3D] [7I] [3C]]
`;

exports[`Game Play > (5) Player 3658_Nate places tile [3C] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - 0 - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P3658_Nate | $6000 | [1I] [1F] [3D] [7I] | 
P5975_Joe | $6000 | [11H] [6D] [11I] [4D] [12F] | 

P3658_Nate [End Turn]
`;

exports[`Game Play > (6) Player 3658_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - 0 - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P3658_Nate | $6000 | [1I] [1F] [3D] [7I] [9C] | 
P5975_Joe | $6000 | [11H] [6D] [11I] [4D] [12F] | 

P5975_Joe [Choose Tile: [11H] [6D] [11I] [4D] [12F]]
`;

exports[`Game Play > (7) Player 5975_Joe places tile [11H] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - 0 - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - 0 0 -
 - - - - - - - - - - - -

P3658_Nate | $6000 | [1I] [1F] [3D] [7I] [9C] | 
P5975_Joe | $6000 | [6D] [11I] [4D] [12F] | 

P5975_Joe [Choose Hotel: A C F I W T L]
`;

exports[`Game Play > (8) Player 5975_Joe starts Continental 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - 0 - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $6000 | [1I] [1F] [3D] [7I] [9C] | 
P5975_Joe | $6000 | [6D] [11I] [4D] [12F] | C:1

P5975_Joe [Choose Shares: C] [End Turn]
`;

exports[`Game Play > (9) Player 5975_Joe purchases Continental 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - 0 - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $6000 | [1I] [1F] [3D] [7I] [9C] | 
P5975_Joe | $5600 | [6D] [11I] [4D] [12F] | C:2

P5975_Joe [Choose Shares: C] [End Turn]
`;

exports[`Game Play > (10) Player 5975_Joe purchases Continental 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - 0 - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $6000 | [1I] [1F] [3D] [7I] [9C] | 
P5975_Joe | $5200 | [6D] [11I] [4D] [12F] | C:3

P5975_Joe [Choose Shares: C] [End Turn]
`;

exports[`Game Play > (11) Player 5975_Joe purchases Continental 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - 0 - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $6000 | [1I] [1F] [3D] [7I] [9C] | 
P5975_Joe | $4800 | [6D] [11I] [4D] [12F] | C:4

P5975_Joe [End Turn]
`;

exports[`Game Play > (12) Player 5975_Joe ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - 0 - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $6000 | [1I] [1F] [3D] [7I] [9C] | 
P5975_Joe | $4800 | [6D] [11I] [4D] [12F] [10B] | C:4

P3658_Nate [Choose Tile: [1I] [1F] [3D] [7I] [9C]]
`;

exports[`Game Play > (13) Player 3658_Nate places tile [3D] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - 0 - - - - - - - - -
 - - 0 - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $6000 | [1I] [1F] [7I] [9C] | 
P5975_Joe | $4800 | [6D] [11I] [4D] [12F] [10B] | C:4

P3658_Nate [Choose Hotel: A F I W T L]
`;

exports[`Game Play > (14) Player 3658_Nate starts Festival 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - F - - - - - - - - -
 - - F - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $6000 | [1I] [1F] [7I] [9C] | F:1
P5975_Joe | $4800 | [6D] [11I] [4D] [12F] [10B] | C:4

P3658_Nate [Choose Shares: C F] [End Turn]
`;

exports[`Game Play > (15) Player 3658_Nate purchases Festival 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - F - - - - - - - - -
 - - F - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $5700 | [1I] [1F] [7I] [9C] | F:2
P5975_Joe | $4800 | [6D] [11I] [4D] [12F] [10B] | C:4

P3658_Nate [Choose Shares: C F] [End Turn]
`;

exports[`Game Play > (16) Player 3658_Nate purchases Festival 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - F - - - - - - - - -
 - - F - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $5400 | [1I] [1F] [7I] [9C] | F:3
P5975_Joe | $4800 | [6D] [11I] [4D] [12F] [10B] | C:4

P3658_Nate [Choose Shares: C F] [End Turn]
`;

exports[`Game Play > (17) Player 3658_Nate purchases Festival 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - F - - - - - - - - -
 - - F - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $5100 | [1I] [1F] [7I] [9C] | F:4
P5975_Joe | $4800 | [6D] [11I] [4D] [12F] [10B] | C:4

P3658_Nate [End Turn]
`;

exports[`Game Play > (18) Player 3658_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - F - - - - - - - - -
 - - F - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $5100 | [1I] [1F] [7I] [9C] [6B] | F:4
P5975_Joe | $4800 | [6D] [11I] [4D] [12F] [10B] | C:4

P5975_Joe [Choose Tile: [6D] [11I] [4D] [12F] [10B]]
`;

exports[`Game Play > (19) Player 5975_Joe places tile [6D] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $5100 | [1I] [1F] [7I] [9C] [6B] | F:4
P5975_Joe | $4800 | [11I] [4D] [12F] [10B] | C:4

P5975_Joe [Choose Shares: C F] [End Turn]
`;

exports[`Game Play > (20) Player 5975_Joe ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $5100 | [1I] [1F] [7I] [9C] [6B] | F:4
P5975_Joe | $4800 | [11I] [4D] [12F] [10B] [2F] | C:4

P3658_Nate [Choose Tile: [1I] [1F] [7I] [9C] [6B]]
`;

exports[`Game Play > (21) Player 3658_Nate places tile [6B] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $5100 | [1I] [1F] [7I] [9C] | F:4
P5975_Joe | $4800 | [11I] [4D] [12F] [10B] [2F] | C:4

P3658_Nate [Choose Shares: C F] [End Turn]
`;

exports[`Game Play > (22) Player 3658_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $5100 | [1I] [1F] [7I] [9C] [9H] | F:4
P5975_Joe | $4800 | [11I] [4D] [12F] [10B] [2F] | C:4

P5975_Joe [Choose Tile: [11I] [4D] [12F] [10B] [2F]]
`;

exports[`Game Play > (23) Player 5975_Joe places tile [2F] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - - 0 - - - -
 - 0 - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $5100 | [1I] [1F] [7I] [9C] [9H] | F:4
P5975_Joe | $4800 | [11I] [4D] [12F] [10B] | C:4

P5975_Joe [Choose Shares: C F] [End Turn]
`;

exports[`Game Play > (24) Player 5975_Joe ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - - 0 - - - -
 - 0 - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $5100 | [1I] [1F] [7I] [9C] [9H] | F:4
P5975_Joe | $4800 | [11I] [4D] [12F] [10B] [1C] | C:4

P3658_Nate [Choose Tile: [1I] [1F] [7I] [9C] [9H]]
`;

exports[`Game Play > (25) Player 3658_Nate places tile [1F] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - - 0 - - - -
 0 0 - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $5100 | [1I] [7I] [9C] [9H] | F:4
P5975_Joe | $4800 | [11I] [4D] [12F] [10B] [1C] | C:4

P3658_Nate [Choose Hotel: A I W T L]
`;

exports[`Game Play > (26) Player 3658_Nate starts Imperial 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - - 0 - - - -
 I I - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $5100 | [1I] [7I] [9C] [9H] | F:4 I:1
P5975_Joe | $4800 | [11I] [4D] [12F] [10B] [1C] | C:4

P3658_Nate [Choose Shares: C F I] [End Turn]
`;

exports[`Game Play > (27) Player 3658_Nate purchases Imperial 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - - 0 - - - -
 I I - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $4700 | [1I] [7I] [9C] [9H] | F:4 I:2
P5975_Joe | $4800 | [11I] [4D] [12F] [10B] [1C] | C:4

P3658_Nate [Choose Shares: C F I] [End Turn]
`;

exports[`Game Play > (28) Player 3658_Nate purchases Continental 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - - 0 - - - -
 I I - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $4300 | [1I] [7I] [9C] [9H] | C:1 F:4 I:2
P5975_Joe | $4800 | [11I] [4D] [12F] [10B] [1C] | C:4

P3658_Nate [Choose Shares: C F I] [End Turn]
`;

exports[`Game Play > (29) Player 3658_Nate purchases Festival 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - - 0 - - - -
 I I - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $4000 | [1I] [7I] [9C] [9H] | C:1 F:5 I:2
P5975_Joe | $4800 | [11I] [4D] [12F] [10B] [1C] | C:4

P3658_Nate [End Turn]
`;

exports[`Game Play > (30) Player 3658_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - - 0 - - - -
 I I - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $4000 | [1I] [7I] [9C] [9H] [7E] | C:1 F:5 I:2
P5975_Joe | $4800 | [11I] [4D] [12F] [10B] [1C] | C:4

P5975_Joe [Choose Tile: [11I] [4D] [12F] [10B] [1C]]
`;

exports[`Game Play > (31) Player 5975_Joe places tile [10B] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - - 0 - - - -
 I I - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $4000 | [1I] [7I] [9C] [9H] [7E] | C:1 F:5 I:2
P5975_Joe | $4800 | [11I] [4D] [12F] [1C] | C:4

P5975_Joe [Choose Shares: C F I] [End Turn]
`;

exports[`Game Play > (32) Player 5975_Joe ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - - 0 - - - -
 I I - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $4000 | [1I] [7I] [9C] [9H] [7E] | C:1 F:5 I:2
P5975_Joe | $4800 | [11I] [4D] [12F] [1C] [6G] | C:4

P3658_Nate [Choose Tile: [1I] [7I] [9C] [9H] [7E]]
`;

exports[`Game Play > (33) Player 3658_Nate places tile [7E] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - 0 0 - - - -
 I I - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $4000 | [1I] [7I] [9C] [9H] | C:1 F:5 I:2
P5975_Joe | $4800 | [11I] [4D] [12F] [1C] [6G] | C:4

P3658_Nate [Choose Hotel: A W T L]
`;

exports[`Game Play > (34) Player 3658_Nate starts Worldwide 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $4000 | [1I] [7I] [9C] [9H] | C:1 F:5 I:2 W:1
P5975_Joe | $4800 | [11I] [4D] [12F] [1C] [6G] | C:4

P3658_Nate [Choose Shares: C F I W] [End Turn]
`;

exports[`Game Play > (35) Player 3658_Nate purchases Worldwide 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $3700 | [1I] [7I] [9C] [9H] | C:1 F:5 I:2 W:2
P5975_Joe | $4800 | [11I] [4D] [12F] [1C] [6G] | C:4

P3658_Nate [Choose Shares: C F I W] [End Turn]
`;

exports[`Game Play > (36) Player 3658_Nate purchases Worldwide 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $3400 | [1I] [7I] [9C] [9H] | C:1 F:5 I:2 W:3
P5975_Joe | $4800 | [11I] [4D] [12F] [1C] [6G] | C:4

P3658_Nate [Choose Shares: C F I W] [End Turn]
`;

exports[`Game Play > (37) Player 3658_Nate purchases Worldwide 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $3100 | [1I] [7I] [9C] [9H] | C:1 F:5 I:2 W:4
P5975_Joe | $4800 | [11I] [4D] [12F] [1C] [6G] | C:4

P3658_Nate [End Turn]
`;

exports[`Game Play > (38) Player 3658_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $3100 | [1I] [7I] [9C] [9H] [6I] | C:1 F:5 I:2 W:4
P5975_Joe | $4800 | [11I] [4D] [12F] [1C] [6G] | C:4

P5975_Joe [Choose Tile: [11I] [4D] [12F] [1C] [6G]]
`;

exports[`Game Play > (39) Player 5975_Joe places tile [6G] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $3100 | [1I] [7I] [9C] [9H] [6I] | C:1 F:5 I:2 W:4
P5975_Joe | $4800 | [11I] [4D] [12F] [1C] | C:4

P5975_Joe [Choose Shares: C F I W] [End Turn]
`;

exports[`Game Play > (40) Player 5975_Joe purchases Festival 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $3100 | [1I] [7I] [9C] [9H] [6I] | C:1 F:5 I:2 W:4
P5975_Joe | $4500 | [11I] [4D] [12F] [1C] | C:4 F:1

P5975_Joe [Choose Shares: C F I W] [End Turn]
`;

exports[`Game Play > (41) Player 5975_Joe purchases Continental 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $3100 | [1I] [7I] [9C] [9H] [6I] | C:1 F:5 I:2 W:4
P5975_Joe | $4100 | [11I] [4D] [12F] [1C] | C:5 F:1

P5975_Joe [Choose Shares: C F I W] [End Turn]
`;

exports[`Game Play > (42) Player 5975_Joe purchases Worldwide 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $3100 | [1I] [7I] [9C] [9H] [6I] | C:1 F:5 I:2 W:4
P5975_Joe | $3800 | [11I] [4D] [12F] [1C] | C:5 F:1 W:1

P5975_Joe [End Turn]
`;

exports[`Game Play > (43) Player 5975_Joe ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - - - - - - - -

P3658_Nate | $3100 | [1I] [7I] [9C] [9H] [6I] | C:1 F:5 I:2 W:4
P5975_Joe | $3800 | [11I] [4D] [12F] [1C] [11F] | C:5 F:1 W:1

P3658_Nate [Choose Tile: [1I] [7I] [9C] [9H] [6I]]
`;

exports[`Game Play > (44) Player 3658_Nate places tile [7I] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - - 0 - - - - -

P3658_Nate | $3100 | [1I] [9C] [9H] [6I] | C:1 F:5 I:2 W:4
P5975_Joe | $3800 | [11I] [4D] [12F] [1C] [11F] | C:5 F:1 W:1

P3658_Nate [Choose Shares: C F I W] [End Turn]
`;

exports[`Game Play > (45) Player 3658_Nate purchases Worldwide 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - - 0 - - - - -

P3658_Nate | $2800 | [1I] [9C] [9H] [6I] | C:1 F:5 I:2 W:5
P5975_Joe | $3800 | [11I] [4D] [12F] [1C] [11F] | C:5 F:1 W:1

P3658_Nate [Choose Shares: C F I W] [End Turn]
`;

exports[`Game Play > (46) Player 3658_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F - - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - - 0 - - - - -

P3658_Nate | $2800 | [1I] [9C] [9H] [6I] [5A] | C:1 F:5 I:2 W:5
P5975_Joe | $3800 | [11I] [4D] [12F] [1C] [11F] | C:5 F:1 W:1

P5975_Joe [Choose Tile: [11I] [4D] [12F] [1C] [11F]]
`;

exports[`Game Play > (47) Player 5975_Joe places tile [4D] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - - 0 - - - - -

P3658_Nate | $2800 | [1I] [9C] [9H] [6I] [5A] | C:1 F:5 I:2 W:5
P5975_Joe | $3800 | [11I] [12F] [1C] [11F] | C:5 F:1 W:1

P5975_Joe [Choose Shares: C F I W] [End Turn]
`;

exports[`Game Play > (48) Player 5975_Joe ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - - 0 - - - - -

P3658_Nate | $2800 | [1I] [9C] [9H] [6I] [5A] | C:1 F:5 I:2 W:5
P5975_Joe | $3800 | [11I] [12F] [1C] [11F] [3E] | C:5 F:1 W:1

P3658_Nate [Choose Tile: [1I] [9C] [9H] [6I] [5A]]
`;

exports[`Game Play > (49) Player 3658_Nate places tile [6I] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - 0 0 - - - - -

P3658_Nate | $2800 | [1I] [9C] [9H] [5A] | C:1 F:5 I:2 W:5
P5975_Joe | $3800 | [11I] [12F] [1C] [11F] [3E] | C:5 F:1 W:1

P3658_Nate [Choose Hotel: A T L]
`;

exports[`Game Play > (50) Player 3658_Nate starts Luxor 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2800 | [1I] [9C] [9H] [5A] | C:1 F:5 I:2 L:1 W:5
P5975_Joe | $3800 | [11I] [12F] [1C] [11F] [3E] | C:5 F:1 W:1

P3658_Nate [Choose Shares: C F I W L] [End Turn]
`;

exports[`Game Play > (51) Player 3658_Nate purchases Continental 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2400 | [1I] [9C] [9H] [5A] | C:2 F:5 I:2 L:1 W:5
P5975_Joe | $3800 | [11I] [12F] [1C] [11F] [3E] | C:5 F:1 W:1

P3658_Nate [Choose Shares: C F I W L] [End Turn]
`;

exports[`Game Play > (52) Player 3658_Nate purchases Luxor 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9C] [9H] [5A] | C:2 F:5 I:2 L:2 W:5
P5975_Joe | $3800 | [11I] [12F] [1C] [11F] [3E] | C:5 F:1 W:1

P3658_Nate [Choose Shares: C F I W L] [End Turn]
`;

exports[`Game Play > (53) Player 3658_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9C] [9H] [5A] [2D] | C:2 F:5 I:2 L:2 W:5
P5975_Joe | $3800 | [11I] [12F] [1C] [11F] [3E] | C:5 F:1 W:1

P5975_Joe [Choose Tile: [11I] [12F] [1C] [11F] [3E]]
`;

exports[`Game Play > (54) Player 5975_Joe places tile [11F] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - 0 -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9C] [9H] [5A] [2D] | C:2 F:5 I:2 L:2 W:5
P5975_Joe | $3800 | [11I] [12F] [1C] [3E] | C:5 F:1 W:1

P5975_Joe [Choose Shares: C F I W L] [End Turn]
`;

exports[`Game Play > (55) Player 5975_Joe ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - - - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - 0 -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9C] [9H] [5A] [2D] | C:2 F:5 I:2 L:2 W:5
P5975_Joe | $3800 | [11I] [12F] [1C] [3E] [8F] | C:5 F:1 W:1

P3658_Nate [Choose Tile: [1I] [9C] [9H] [5A] [2D]]
`;

exports[`Game Play > (56) Player 3658_Nate places tile [9C] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - 0 - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - 0 -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] | C:2 F:5 I:2 L:2 W:5
P5975_Joe | $3800 | [11I] [12F] [1C] [3E] [8F] | C:5 F:1 W:1

P3658_Nate [Choose Shares: C F I W L] [End Turn]
`;

exports[`Game Play > (57) Player 3658_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 - - F - - - - - 0 - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - 0 -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] [8C] | C:2 F:5 I:2 L:2 W:5
P5975_Joe | $3800 | [11I] [12F] [1C] [3E] [8F] | C:5 F:1 W:1

P5975_Joe [Choose Tile: [11I] [12F] [1C] [3E] [8F]]
`;

exports[`Game Play > (58) Player 5975_Joe places tile [1C] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - - 0 - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - 0 -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] [8C] | C:2 F:5 I:2 L:2 W:5
P5975_Joe | $3800 | [11I] [12F] [3E] [8F] | C:5 F:1 W:1

P5975_Joe [Choose Shares: C F I W L] [End Turn]
`;

exports[`Game Play > (59) Player 5975_Joe purchases Festival 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - - 0 - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - 0 -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] [8C] | C:2 F:5 I:2 L:2 W:5
P5975_Joe | $3400 | [11I] [12F] [3E] [8F] | C:5 F:2 W:1

P5975_Joe [Choose Shares: C F I W L] [End Turn]
`;

exports[`Game Play > (60) Player 5975_Joe purchases Continental 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - - 0 - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - 0 -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] [8C] | C:2 F:5 I:2 L:2 W:5
P5975_Joe | $3000 | [11I] [12F] [3E] [8F] | C:6 F:2 W:1

P5975_Joe [Choose Shares: C F I W L] [End Turn]
`;

exports[`Game Play > (61) Player 5975_Joe purchases Luxor 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - - 0 - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - 0 -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] [8C] | C:2 F:5 I:2 L:2 W:5
P5975_Joe | $2800 | [11I] [12F] [3E] [8F] | C:6 F:2 L:1 W:1

P5975_Joe [End Turn]
`;

exports[`Game Play > (62) Player 5975_Joe ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - - 0 - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - 0 -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] [8C] | C:2 F:5 I:2 L:2 W:5
P5975_Joe | $2800 | [11I] [12F] [3E] [8F] [2I] | C:6 F:2 L:1 W:1

P3658_Nate [Choose Tile: [1I] [9H] [5A] [2D] [8C]]
`;

exports[`Game Play > (63) Player 3658_Nate places tile [8C] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - 0 0 - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - 0 -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] | C:2 F:5 I:2 L:2 W:5
P5975_Joe | $2800 | [11I] [12F] [3E] [8F] [2I] | C:6 F:2 L:1 W:1

P3658_Nate [Choose Hotel: A T]
`;

exports[`Game Play > (64) Player 3658_Nate starts Tower 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - 0 -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [12F] [3E] [8F] [2I] | C:6 F:2 L:1 W:1

P3658_Nate [Choose Shares: C F I W T L] [End Turn]
`;

exports[`Game Play > (65) Player 3658_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - 0 -
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] [5D] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [12F] [3E] [8F] [2I] | C:6 F:2 L:1 W:1

P5975_Joe [Choose Tile: [11I] [12F] [3E] [8F] [2I]]
`;

exports[`Game Play > (66) Player 5975_Joe places tile [12F] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - 0 0
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] [5D] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [8F] [2I] | C:6 F:2 L:1 W:1

P5975_Joe [Choose Hotel: A]
`;

exports[`Game Play > (67) Player 5975_Joe starts American 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - A A
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] [5D] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [8F] [2I] | A:1 C:6 F:2 L:1 W:1

P5975_Joe [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (68) Player 5975_Joe ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F - 0 - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - A A
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] [5D] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [8F] [2I] [4G] | A:1 C:6 F:2 L:1 W:1

P3658_Nate [Choose Tile: [1I] [9H] [5A] [2D] [5D]]
`;

exports[`Game Play > (69) Player 3658_Nate places tile [5D] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - A A
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [8F] [2I] [4G] | A:1 C:6 F:2 L:1 W:1

P3658_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (70) Player 3658_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - - - - - W W - - - -
 I I - - - - - - - - A A
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] [9G] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [8F] [2I] [4G] | A:1 C:6 F:2 L:1 W:1

P5975_Joe [Choose Tile: [11I] [3E] [8F] [2I] [4G]]
`;

exports[`Game Play > (71) Player 5975_Joe places tile [8F] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - - - - - W W - - - -
 I I - - - - - W - - A A
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] [9G] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [2I] [4G] | A:1 C:6 F:2 L:1 W:1

P5975_Joe [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (72) Player 5975_Joe ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - - - - - W W - - - -
 I I - - - - - W - - A A
 - - - - - 0 - - - - - -
 - - - - - - - - - C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [9H] [5A] [2D] [9G] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [2I] [4G] [5I] | A:1 C:6 F:2 L:1 W:1

P3658_Nate [Choose Tile: [1I] [9H] [5A] [2D] [9G]]
`;

exports[`Game Play > (73) Player 3658_Nate places tile [9H] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - - - - - W W - - - -
 I I - - - - - W - - A A
 - - - - - 0 - - - - - -
 - - - - - - - - C C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [5A] [2D] [9G] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [2I] [4G] [5I] | A:1 C:6 F:2 L:1 W:1

P3658_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (74) Player 3658_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - - - - - W W - - - -
 I I - - - - - W - - A A
 - - - - - 0 - - - - - -
 - - - - - - - - C C C -
 - - - - - L L - - - - -

P3658_Nate | $2200 | [1I] [5A] [2D] [9G] [3A] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [2I] [4G] [5I] | A:1 C:6 F:2 L:1 W:1

P5975_Joe [Choose Tile: [11I] [3E] [2I] [4G] [5I]]
`;

exports[`Game Play > (75) Player 5975_Joe places tile [5I] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - - - - - W W - - - -
 I I - - - - - W - - A A
 - - - - - 0 - - - - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [5A] [2D] [9G] [3A] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [2I] [4G] | A:1 C:6 F:2 L:1 W:1

P5975_Joe [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (76) Player 5975_Joe ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - - - - - W W - - - -
 I I - - - - - W - - A A
 - - - - - 0 - - - - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [5A] [2D] [9G] [3A] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [2I] [4G] [1D] | A:1 C:6 F:2 L:1 W:1

P3658_Nate [Choose Tile: [1I] [5A] [2D] [9G] [3A]]
`;

exports[`Game Play > (77) Player 3658_Nate places tile [9G] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - - - - - W W - - - -
 I I - - - - - W - - A A
 - - - - - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [5A] [2D] [3A] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [2I] [4G] [1D] | A:1 C:6 F:2 L:1 W:1

P3658_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (78) Player 3658_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - - - - - W W - - - -
 I I - - - - - W - - A A
 - - - - - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [5A] [2D] [3A] [12E] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [2I] [4G] [1D] | A:1 C:6 F:2 L:1 W:1

P5975_Joe [Choose Tile: [11I] [3E] [2I] [4G] (unavailable: [1D])]
`;

exports[`Game Play > (79) Player 5975_Joe places tile [4G] 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - - - - - W W - - - -
 I I - - - - - W - - A A
 - - - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [5A] [2D] [3A] [12E] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [2I] [1D] | A:1 C:6 F:2 L:1 W:1

P5975_Joe [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (80) Player 5975_Joe ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - - - - - W W - - - -
 I I - - - - - W - - A A
 - - - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [5A] [2D] [3A] [12E] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [2I] [1D] [2G] | A:1 C:6 F:2 L:1 W:1

P3658_Nate [Choose Tile: [1I] [5A] [2D] [3A] [12E]]
`;

exports[`Game Play > (81) Player 3658_Nate places tile [5A] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - - - - - W W - - - -
 I I - - - - - W - - A A
 - - - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [2D] [3A] [12E] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [2I] [1D] [2G] | A:1 C:6 F:2 L:1 W:1

P3658_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (82) Player 3658_Nate ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - - - - - W W - - - -
 I I - - - - - W - - A A
 - - - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [2D] [3A] [12E] [10E] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [3E] [2I] [1D] [2G] | A:1 C:6 F:2 L:1 W:1

P5975_Joe [Choose Tile: [11I] [3E] [2I] [2G] (unavailable: [1D])]
`;

exports[`Game Play > (83) Player 5975_Joe places tile [3E] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - F - - - W W - - - -
 I I - - - - - W - - A A
 - - - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [2D] [3A] [12E] [10E] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [2I] [1D] [2G] | A:1 C:6 F:2 L:1 W:1

P5975_Joe [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (84) Player 5975_Joe ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - F - - - W W - - - -
 I I - - - - - W - - A A
 - - - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [2D] [3A] [12E] [10E] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [2I] [1D] [2G] [8H] | A:1 C:6 F:2 L:1 W:1

P3658_Nate [Choose Tile: [1I] [2D] [3A] [12E] [10E]]
`;

exports[`Game Play > (85) Player 3658_Nate places tile [10E] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - F - - - W W - 0 - -
 I I - - - - - W - - A A
 - - - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [2D] [3A] [12E] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [2I] [1D] [2G] [8H] | A:1 C:6 F:2 L:1 W:1

P3658_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (86) Player 3658_Nate ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - F - - - W W - 0 - -
 I I - - - - - W - - A A
 - - - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [2D] [3A] [12E] [9A] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [2I] [1D] [2G] [8H] | A:1 C:6 F:2 L:1 W:1

P5975_Joe [Choose Tile: [11I] [2I] [2G] [8H] (unavailable: [1D])]
`;

exports[`Game Play > (87) Player 5975_Joe places tile [2G] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - F - - - W W - 0 - -
 I I - - - - - W - - A A
 - I - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [2D] [3A] [12E] [9A] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2800 | [11I] [2I] [1D] [8H] | A:1 C:6 F:2 L:1 W:1

P5975_Joe [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (88) Player 5975_Joe purchases Luxor 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - F - - - W W - 0 - -
 I I - - - - - W - - A A
 - I - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [2D] [3A] [12E] [9A] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2500 | [11I] [2I] [1D] [8H] | A:1 C:6 F:2 L:2 W:1

P5975_Joe [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (89) Player 5975_Joe purchases American 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - F - - - W W - 0 - -
 I I - - - - - W - - A A
 - I - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [2D] [3A] [12E] [9A] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $2200 | [11I] [2I] [1D] [8H] | A:2 C:6 F:2 L:2 W:1

P5975_Joe [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (90) Player 5975_Joe purchases Worldwide 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - F - - - W W - 0 - -
 I I - - - - - W - - A A
 - I - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [2D] [3A] [12E] [9A] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $1800 | [11I] [2I] [1D] [8H] | A:2 C:6 F:2 L:2 W:2

P5975_Joe [End Turn]
`;

exports[`Game Play > (91) Player 5975_Joe ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - F - - - W W - 0 - -
 I I - - - - - W - - A A
 - I - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [2D] [3A] [12E] [9A] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $1800 | [11I] [2I] [1D] [8H] [7D] | A:2 C:6 F:2 L:2 W:2

P3658_Nate [Choose Tile: [1I] [2D] [3A] [12E] [9A]]
`;

exports[`Game Play > (92) Player 3658_Nate places tile [12E] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - F - - - W W - 0 - A
 I I - - - - - W - - A A
 - I - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [2D] [3A] [9A] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $1800 | [11I] [2I] [1D] [8H] [7D] | A:2 C:6 F:2 L:2 W:2

P3658_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (93) Player 3658_Nate ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F - - - - - -
 - - F - - - W W - 0 - A
 I I - - - - - W - - A A
 - I - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $2200 | [1I] [2D] [3A] [9A] [5H] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $1800 | [11I] [2I] [1D] [8H] [7D] | A:2 C:6 F:2 L:2 W:2

P5975_Joe [Choose Tile: [11I] [2I] [8H] [7D] (unavailable: [1D])]
`;

exports[`Game Play > (94) Player 5975_Joe places tile [7D] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - - - - - F - - A A
 - I - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $6200 | [1I] [2D] [3A] [9A] [5H] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $3800 | [11I] [2I] [1D] [8H] | A:2 C:6 F:2 L:2 W:2

P5975_Joe [Sell (1/2) Worldwide Share] [Keep (1/2) Worldwide Share] [Trade (2/2) Worldwide for 1 Festival]
`;

exports[`Game Play > (95) Player 5975_Joe trades 2 Worldwide -> Festival 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - - - - - F - - A A
 - I - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $6200 | [1I] [2D] [3A] [9A] [5H] | C:2 F:5 I:2 L:2 T:1 W:5
P5975_Joe | $3800 | [11I] [2I] [1D] [8H] | A:2 C:6 F:3 L:2

P3658_Nate [Sell (1/5) Worldwide Share] [Keep (1/5) Worldwide Share] [Trade (2/5) Worldwide for 1 Festival]
`;

exports[`Game Play > (96) Player 3658_Nate trades 2 Worldwide -> Festival 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - - - - - F - - A A
 - I - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $6200 | [1I] [2D] [3A] [9A] [5H] | C:2 F:6 I:2 L:2 T:1 W:3
P5975_Joe | $3800 | [11I] [2I] [1D] [8H] | A:2 C:6 F:3 L:2

P3658_Nate [Sell (1/3) Worldwide Share] [Keep (1/3) Worldwide Share] [Trade (2/3) Worldwide for 1 Festival]
`;

exports[`Game Play > (97) Player 3658_Nate trades 2 Worldwide -> Festival 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - - - - - F - - A A
 - I - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $6200 | [1I] [2D] [3A] [9A] [5H] | C:2 F:7 I:2 L:2 T:1 W:1
P5975_Joe | $3800 | [11I] [2I] [1D] [8H] | A:2 C:6 F:3 L:2

P3658_Nate [Sell (1/1) Worldwide Share] [Keep (1/1) Worldwide Share]
`;

exports[`Game Play > (98) Player 3658_Nate sells 1 orphaned Worldwide share 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - - - - - F - - A A
 - I - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $6600 | [1I] [2D] [3A] [9A] [5H] | C:2 F:7 I:2 L:2 T:1
P5975_Joe | $3800 | [11I] [2I] [1D] [8H] | A:2 C:6 F:3 L:2

P5975_Joe [Choose Shares: A C F I T L] [End Turn]
`;

exports[`Game Play > (99) Player 5975_Joe ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - - - - - F - - A A
 - I - 0 - 0 - - C - - -
 - - - - - - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $6600 | [1I] [2D] [3A] [9A] [5H] | C:2 F:7 I:2 L:2 T:1
P5975_Joe | $3800 | [11I] [2I] [1D] [8H] [11D] | A:2 C:6 F:3 L:2

P3658_Nate [Choose Tile: [1I] [2D] [3A] [9A] [5H]]
`;

exports[`Game Play > (100) Player 3658_Nate places tile [5H] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - - - - - F - - A A
 - I - 0 - 0 - - C - - -
 - - - - L - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $6600 | [1I] [2D] [3A] [9A] | C:2 F:7 I:2 L:2 T:1
P5975_Joe | $3800 | [11I] [2I] [1D] [8H] [11D] | A:2 C:6 F:3 L:2

P3658_Nate [Choose Shares: A C F I T L] [End Turn]
`;

exports[`Game Play > (101) Player 3658_Nate ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - - - - - F - - A A
 - I - 0 - 0 - - C - - -
 - - - - L - - - C C C -
 - - - - L L L - - - - -

P3658_Nate | $6600 | [1I] [2D] [3A] [9A] [4F] | C:2 F:7 I:2 L:2 T:1
P5975_Joe | $3800 | [11I] [2I] [1D] [8H] [11D] | A:2 C:6 F:3 L:2

P5975_Joe [Choose Tile: [11I] [2I] [1D] [8H] [11D]]
`;

exports[`Game Play > (102) Player 5975_Joe places tile [8H] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - - - - - F - - A A
 - I - 0 - 0 - - C - - -
 - - - - L - - C C C C -
 - - - - L L L - - - - -

P3658_Nate | $6600 | [1I] [2D] [3A] [9A] [4F] | C:2 F:7 I:2 L:2 T:1
P5975_Joe | $3800 | [11I] [2I] [1D] [11D] | A:2 C:6 F:3 L:2

P5975_Joe [Choose Shares: A C F I T L] [End Turn]
`;

exports[`Game Play > (103) Player 5975_Joe ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - - - - - F - - A A
 - I - 0 - 0 - - C - - -
 - - - - L - - C C C C -
 - - - - L L L - - - - -

P3658_Nate | $6600 | [1I] [2D] [3A] [9A] [4F] | C:2 F:7 I:2 L:2 T:1
P5975_Joe | $3800 | [11I] [2I] [1D] [11D] [2C] | A:2 C:6 F:3 L:2

P3658_Nate [Choose Tile: [1I] [2D] [3A] [9A] [4F]]
`;

exports[`Game Play > (104) Player 3658_Nate places tile [4F] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - 0 - - - F - - A A
 - I - 0 - 0 - - C - - -
 - - - - L - - C C C C -
 - - - - L L L - - - - -

P3658_Nate | $6600 | [1I] [2D] [3A] [9A] | C:2 F:7 I:2 L:2 T:1
P5975_Joe | $3800 | [11I] [2I] [1D] [11D] [2C] | A:2 C:6 F:3 L:2

P3658_Nate [Choose Hotel: W]
`;

exports[`Game Play > (105) Player 3658_Nate starts Worldwide 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - W - - - F - - A A
 - I - W - 0 - - C - - -
 - - - - L - - C C C C -
 - - - - L L L - - - - -

P3658_Nate | $6600 | [1I] [2D] [3A] [9A] | C:2 F:7 I:2 L:2 T:1 W:1
P5975_Joe | $3800 | [11I] [2I] [1D] [11D] [2C] | A:2 C:6 F:3 L:2

P3658_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (106) Player 3658_Nate purchases Worldwide 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - W - - - F - - A A
 - I - W - 0 - - C - - -
 - - - - L - - C C C C -
 - - - - L L L - - - - -

P3658_Nate | $6300 | [1I] [2D] [3A] [9A] | C:2 F:7 I:2 L:2 T:1 W:2
P5975_Joe | $3800 | [11I] [2I] [1D] [11D] [2C] | A:2 C:6 F:3 L:2

P3658_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (107) Player 3658_Nate purchases Tower 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - W - - - F - - A A
 - I - W - 0 - - C - - -
 - - - - L - - C C C C -
 - - - - L L L - - - - -

P3658_Nate | $6100 | [1I] [2D] [3A] [9A] | C:2 F:7 I:2 L:2 T:2 W:2
P5975_Joe | $3800 | [11I] [2I] [1D] [11D] [2C] | A:2 C:6 F:3 L:2

P3658_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (108) Player 3658_Nate ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - W - - - F - - A A
 - I - W - 0 - - C - - -
 - - - - L - - C C C C -
 - - - - L L L - - - - -

P3658_Nate | $6100 | [1I] [2D] [3A] [9A] [1G] | C:2 F:7 I:2 L:2 T:2 W:2
P5975_Joe | $3800 | [11I] [2I] [1D] [11D] [2C] | A:2 C:6 F:3 L:2

P5975_Joe [Choose Tile: [11I] [2I] [11D] [2C] (unavailable: [1D])]
`;

exports[`Game Play > (109) Player 5975_Joe places tile [11I] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - W - - - F - - A A
 - I - W - 0 - - C - - -
 - - - - L - - C C C C -
 - - - - L L L - - - C -

P3658_Nate | $6100 | [1I] [2D] [3A] [9A] [1G] | C:2 F:7 I:2 L:2 T:2 W:2
P5975_Joe | $3800 | [2I] [1D] [11D] [2C] | A:2 C:6 F:3 L:2

P5975_Joe [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (110) Player 5975_Joe ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - W - - - F - - A A
 - I - W - 0 - - C - - -
 - - - - L - - C C C C -
 - - - - L L L - - - C -

P3658_Nate | $6100 | [1I] [2D] [3A] [9A] [1G] | C:2 F:7 I:2 L:2 T:2 W:2
P5975_Joe | $3800 | [2I] [1D] [11D] [2C] [7H] | A:2 C:6 F:3 L:2

P3658_Nate [Choose Tile: [1I] [2D] [3A] [9A] [1G]]
`;

exports[`Game Play > (111) Player 3658_Nate places tile [9A] 1`] = `
 - - - - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - W - - - F - - A A
 - I - W - 0 - - C - - -
 - - - - L - - C C C C -
 - - - - L L L - - - C -

P3658_Nate | $6100 | [1I] [2D] [3A] [1G] | C:2 F:7 I:2 L:2 T:2 W:2
P5975_Joe | $3800 | [2I] [1D] [11D] [2C] [7H] | A:2 C:6 F:3 L:2

P3658_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (112) Player 3658_Nate ends turn 1`] = `
 - - - - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - W - - - F - - A A
 - I - W - 0 - - C - - -
 - - - - L - - C C C C -
 - - - - L L L - - - C -

P3658_Nate | $6100 | [1I] [2D] [3A] [1G] [1B] | C:2 F:7 I:2 L:2 T:2 W:2
P5975_Joe | $3800 | [2I] [1D] [11D] [2C] [7H] | A:2 C:6 F:3 L:2

P5975_Joe [Choose Tile: [2I] [11D] [2C] [7H] (unavailable: [1D])]
`;

exports[`Game Play > (113) Player 5975_Joe places tile [7H] 1`] = `
 - - - - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - W - - - F - - A A
 - I - W - 0 - - C - - -
 - - - - C - C C C C C -
 - - - - C C C - - - C -

P3658_Nate | $9100 | [1I] [2D] [3A] [1G] [1B] | C:2 F:7 I:2 L:2 T:2 W:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] | A:2 C:6 F:3 L:2

P5975_Joe [Sell (1/2) Luxor Share] [Keep (1/2) Luxor Share] [Trade (2/2) Luxor for 1 Continental]
`;

exports[`Game Play > (114) Player 5975_Joe trades 2 Luxor -> Continental 1`] = `
 - - - - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - W - - - F - - A A
 - I - W - 0 - - C - - -
 - - - - C - C C C C C -
 - - - - C C C - - - C -

P3658_Nate | $9100 | [1I] [2D] [3A] [1G] [1B] | C:2 F:7 I:2 L:2 T:2 W:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] | A:2 C:7 F:3

P3658_Nate [Sell (1/2) Luxor Share] [Keep (1/2) Luxor Share] [Trade (2/2) Luxor for 1 Continental]
`;

exports[`Game Play > (115) Player 3658_Nate trades 2 Luxor -> Continental 1`] = `
 - - - - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - W - - - F - - A A
 - I - W - 0 - - C - - -
 - - - - C - C C C C C -
 - - - - C C C - - - C -

P3658_Nate | $9100 | [1I] [2D] [3A] [1G] [1B] | C:3 F:7 I:2 T:2 W:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] | A:2 C:7 F:3

P5975_Joe [Choose Shares: A C F I W T] [End Turn]
`;

exports[`Game Play > (116) Player 5975_Joe ends turn 1`] = `
 - - - - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - W - - - F - - A A
 - I - W - 0 - - C - - -
 - - - - C - C C C C C -
 - - - - C C C - - - C -

P3658_Nate | $9100 | [1I] [2D] [3A] [1G] [1B] | C:3 F:7 I:2 T:2 W:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] [2E] | A:2 C:7 F:3

P3658_Nate [Choose Tile: [1I] [2D] [3A] [1G] [1B]]
`;

exports[`Game Play > (117) Player 3658_Nate places tile [3A] 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - W - - - F - - A A
 - I - W - 0 - - C - - -
 - - - - C - C C C C C -
 - - - - C C C - - - C -

P3658_Nate | $9100 | [1I] [2D] [1G] [1B] | C:3 F:7 I:2 T:2 W:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] [2E] | A:2 C:7 F:3

P3658_Nate [Choose Shares: A C F I W T] [End Turn]
`;

exports[`Game Play > (118) Player 3658_Nate ends turn 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - - F - - - F F - 0 - A
 I I - W - - - F - - A A
 - I - W - 0 - - C - - -
 - - - - C - C C C C C -
 - - - - C C C - - - C -

P3658_Nate | $9100 | [1I] [2D] [1G] [1B] [6A] | C:3 F:7 I:2 T:2 W:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] [2E] | A:2 C:7 F:3

P5975_Joe [Choose Tile: [2I] [1D] [11D] [2C] [2E]]
`;

exports[`Game Play > (119) Player 5975_Joe places tile [2E] 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - F F - - - F F - 0 - A
 F F - W - - - F - - A A
 - F - W - 0 - - C - - -
 - - - - C - C C C C C -
 - - - - C C C - - - C -

P3658_Nate | $16600 | [1I] [2D] [1G] [1B] [6A] | C:3 F:7 I:2 T:2 W:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] | A:2 C:7 F:3

P3658_Nate [Sell (1/2) Imperial Share] [Keep (1/2) Imperial Share] [Trade (2/2) Imperial for 1 Festival]
`;

exports[`Game Play > (120) Player 3658_Nate trades 2 Imperial -> Festival 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - F F - - - F F - 0 - A
 F F - W - - - F - - A A
 - F - W - 0 - - C - - -
 - - - - C - C C C C C -
 - - - - C C C - - - C -

P3658_Nate | $16600 | [1I] [2D] [1G] [1B] [6A] | C:3 F:8 T:2 W:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] | A:2 C:7 F:3

P5975_Joe [Choose Shares: A C F W T] [End Turn]
`;

exports[`Game Play > (121) Player 5975_Joe ends turn 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - F F - - - F F - 0 - A
 F F - W - - - F - - A A
 - F - W - 0 - - C - - -
 - - - - C - C C C C C -
 - - - - C C C - - - C -

P3658_Nate | $16600 | [1I] [2D] [1G] [1B] [6A] | C:3 F:8 T:2 W:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] [4H] | A:2 C:7 F:3

P3658_Nate [Choose Tile: [1I] [2D] [1G] [1B] [6A]]
`;

exports[`Game Play > (122) Player 3658_Nate places tile [1I] 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - F F - - - F F - 0 - A
 F F - W - - - F - - A A
 - F - W - 0 - - C - - -
 - - - - C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $16600 | [2D] [1G] [1B] [6A] | C:3 F:8 T:2 W:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] [4H] | A:2 C:7 F:3

P3658_Nate [Choose Shares: A C F W T] [End Turn]
`;

exports[`Game Play > (123) Player 3658_Nate ends turn 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - F F - - - F F - 0 - A
 F F - W - - - F - - A A
 - F - W - 0 - - C - - -
 - - - - C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $16600 | [2D] [1G] [1B] [6A] [9D] | C:3 F:8 T:2 W:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] [4H] | A:2 C:7 F:3

P5975_Joe [Choose Tile: [2I] [1D] [11D] [2C] [4H]]
`;

exports[`Game Play > (124) Player 5975_Joe places tile [4H] 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - F F - - - F F - 0 - A
 F F - C - - - F - - A A
 - F - C - 0 - - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $21100 | [2D] [1G] [1B] [6A] [9D] | C:3 F:8 T:2 W:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] | A:2 C:7 F:3

P3658_Nate [Sell (1/2) Worldwide Share] [Keep (1/2) Worldwide Share] [Trade (2/2) Worldwide for 1 Continental]
`;

exports[`Game Play > (125) Player 3658_Nate sells 1 orphaned Worldwide share 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - F F - - - F F - 0 - A
 F F - C - - - F - - A A
 - F - C - 0 - - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $21400 | [2D] [1G] [1B] [6A] [9D] | C:3 F:8 T:2 W:1
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] | A:2 C:7 F:3

P3658_Nate [Sell (1/1) Worldwide Share] [Keep (1/1) Worldwide Share]
`;

exports[`Game Play > (126) Player 3658_Nate sells 1 orphaned Worldwide share 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - F F - - - F F - 0 - A
 F F - C - - - F - - A A
 - F - C - 0 - - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $21700 | [2D] [1G] [1B] [6A] [9D] | C:3 F:8 T:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] | A:2 C:7 F:3

P5975_Joe [Choose Shares: A C F T] [End Turn]
`;

exports[`Game Play > (127) Player 5975_Joe ends turn 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - - - - -
 - F F - - - F F - 0 - A
 F F - C - - - F - - A A
 - F - C - 0 - - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $21700 | [2D] [1G] [1B] [6A] [9D] | C:3 F:8 T:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] [11E] | A:2 C:7 F:3

P3658_Nate [Choose Tile: [2D] [1G] [1B] [6A] [9D]]
`;

exports[`Game Play > (128) Player 3658_Nate places tile [9D] 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - T - - -
 - F F - - - F F - 0 - A
 F F - C - - - F - - A A
 - F - C - 0 - - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $21700 | [2D] [1G] [1B] [6A] | C:3 F:8 T:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] [11E] | A:2 C:7 F:3

P3658_Nate [Choose Shares: A C F T] [End Turn]
`;

exports[`Game Play > (129) Player 3658_Nate ends turn 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - T - - -
 - F F - - - F F - 0 - A
 F F - C - - - F - - A A
 - F - C - 0 - - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $21700 | [2D] [1G] [1B] [6A] [5G] | C:3 F:8 T:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] [11E] | A:2 C:7 F:3

P5975_Joe [Choose Tile: [2I] [1D] [11D] [2C] [11E]]
`;

exports[`Game Play > (130) Player 5975_Joe places tile [11E] 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - T - - -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C - 0 - - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $21700 | [2D] [1G] [1B] [6A] [5G] | C:3 F:8 T:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] | A:2 C:7 F:3

P5975_Joe [Choose Shares: A C F T] [End Turn]
`;

exports[`Game Play > (131) Player 5975_Joe ends turn 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - T - - -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C - 0 - - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $21700 | [2D] [1G] [1B] [6A] [5G] | C:3 F:8 T:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] [7C] | A:2 C:7 F:3

P3658_Nate [Choose Tile: [2D] [1G] [1B] [6A] [5G]]
`;

exports[`Game Play > (132) Player 3658_Nate places tile [5G] 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - T - - -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C - - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $21700 | [2D] [1G] [1B] [6A] | C:3 F:8 T:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] [7C] | A:2 C:7 F:3

P3658_Nate [Choose Shares: A C F T] [End Turn]
`;

exports[`Game Play > (133) Player 3658_Nate ends turn 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - - T T - - -
 - - F F F F F - T - - -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C - - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $21700 | [2D] [1G] [1B] [6A] [7G] | C:3 F:8 T:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] [7C] | A:2 C:7 F:3

P5975_Joe [Choose Tile: [2I] [1D] [11D] [2C] [7C]]
`;

exports[`Game Play > (134) Player 5975_Joe places tile [7C] 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - F F F - - -
 - - F F F F F - F - - -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C - - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $26200 | [2D] [1G] [1B] [6A] [7G] | C:3 F:8 T:2
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] | A:2 C:7 F:3

P3658_Nate [Sell (1/2) Tower Share] [Keep (1/2) Tower Share] [Trade (2/2) Tower for 1 Festival]
`;

exports[`Game Play > (135) Player 3658_Nate trades 2 Tower -> Festival 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - F F F - - -
 - - F F F F F - F - - -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C - - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $26200 | [2D] [1G] [1B] [6A] [7G] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] | A:2 C:7 F:3

P5975_Joe [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (136) Player 5975_Joe ends turn 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - F F F - - -
 - - F F F F F - F - - -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C - - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $26200 | [2D] [1G] [1B] [6A] [7G] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] [9I] | A:2 C:7 F:3

P3658_Nate [Choose Tile: [2D] [1G] [1B] [6A] [7G]]
`;

exports[`Game Play > (137) Player 3658_Nate places tile [7G] 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - F F F - - -
 - - F F F F F - F - - -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $26200 | [2D] [1G] [1B] [6A] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] [9I] | A:2 C:7 F:3

P3658_Nate [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (138) Player 3658_Nate ends turn 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - F F F - - -
 - - F F F F F - F - - -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $26200 | [2D] [1G] [1B] [6A] [10G] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [11D] [2C] [9I] | A:2 C:7 F:3

P5975_Joe [Choose Tile: [2I] [1D] [11D] [2C] [9I]]
`;

exports[`Game Play > (139) Player 5975_Joe places tile [11D] 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - F F F - - -
 - - F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $26200 | [2D] [1G] [1B] [6A] [10G] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [2C] [9I] | A:2 C:7 F:3

P5975_Joe [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (140) Player 5975_Joe ends turn 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - F F F - - -
 - - F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C - - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $26200 | [2D] [1G] [1B] [6A] [10G] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [2C] [9I] [11A] | A:2 C:7 F:3

P3658_Nate [Choose Tile: [2D] [1G] [1B] [6A] [10G]]
`;

exports[`Game Play > (141) Player 3658_Nate places tile [10G] 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - F F F - - -
 - - F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $26200 | [2D] [1G] [1B] [6A] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [2C] [9I] [11A] | A:2 C:7 F:3

P3658_Nate [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (142) Player 3658_Nate ends turn 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - F F F - - -
 - - F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - - - C -

P3658_Nate | $26200 | [2D] [1G] [1B] [6A] [12C] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [2C] [9I] [11A] | A:2 C:7 F:3

P5975_Joe [Choose Tile: [2I] [1D] [2C] [9I] [11A]]
`;

exports[`Game Play > (143) Player 5975_Joe places tile [9I] 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - F F F - - -
 - - F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [2D] [1G] [1B] [6A] [12C] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [2C] [11A] | A:2 C:7 F:3

P5975_Joe [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (144) Player 5975_Joe ends turn 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - F F F - - -
 - - F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [2D] [1G] [1B] [6A] [12C] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [2C] [11A] [3I] | A:2 C:7 F:3

P3658_Nate [Choose Tile: [2D] [1G] [1B] [6A] [12C]]
`;

exports[`Game Play > (145) Player 3658_Nate places tile [2D] 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - F F F - - -
 - F F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [1G] [1B] [6A] [12C] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [2C] [11A] [3I] | A:2 C:7 F:3

P3658_Nate [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (146) Player 3658_Nate ends turn 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 0 - F - - - F F F - - -
 - F F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [1G] [1B] [6A] [12C] [5B] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [2C] [11A] [3I] | A:2 C:7 F:3

P5975_Joe [Choose Tile: [2I] [1D] [2C] [11A] [3I]]
`;

exports[`Game Play > (147) Player 5975_Joe places tile [2C] 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 F F F - - - F F F - - -
 - F F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [1G] [1B] [6A] [12C] [5B] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [11A] [3I] | A:2 C:7 F:3

P5975_Joe [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (148) Player 5975_Joe ends turn 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 F F F - - - F F F - - -
 - F F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [1G] [1B] [6A] [12C] [5B] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [11A] [3I] [4I] | A:2 C:7 F:3

P3658_Nate [Choose Tile: [1G] [1B] [6A] [12C] [5B]]
`;

exports[`Game Play > (149) Player 3658_Nate places tile [12C] 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 F F F - - - F F F - - 0
 - F F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [1G] [1B] [6A] [5B] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [11A] [3I] [4I] | A:2 C:7 F:3

P3658_Nate [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (150) Player 3658_Nate ends turn 1`] = `
 - - 0 - 0 - - - 0 - - -
 - - - - - 0 - - - 0 - -
 F F F - - - F F F - - 0
 - F F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [1G] [1B] [6A] [5B] [5F] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [11A] [3I] [4I] | A:2 C:7 F:3

P5975_Joe [Choose Tile: [2I] [1D] [11A] [3I] [4I]]
`;

exports[`Game Play > (151) Player 5975_Joe places tile [11A] 1`] = `
 - - 0 - 0 - - - 0 - 0 -
 - - - - - 0 - - - 0 - -
 F F F - - - F F F - - 0
 - F F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [1G] [1B] [6A] [5B] [5F] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [3I] [4I] | A:2 C:7 F:3

P5975_Joe [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (152) Player 5975_Joe ends turn 1`] = `
 - - 0 - 0 - - - 0 - 0 -
 - - - - - 0 - - - 0 - -
 F F F - - - F F F - - 0
 - F F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C - - - F - - A A
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [1G] [1B] [6A] [5B] [5F] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [3I] [4I] [10F] | A:2 C:7 F:3

P3658_Nate [Choose Tile: [1G] [1B] [6A] [5B] [5F]]
`;

exports[`Game Play > (153) Player 3658_Nate places tile [5F] 1`] = `
 - - 0 - 0 - - - 0 - 0 -
 - - - - - 0 - - - 0 - -
 F F F - - - F F F - - 0
 - F F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C C - - F - - A A
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [1G] [1B] [6A] [5B] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [3I] [4I] [10F] | A:2 C:7 F:3

P3658_Nate [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (154) Player 3658_Nate ends turn 1`] = `
 - - 0 - 0 - - - 0 - 0 -
 - - - - - 0 - - - 0 - -
 F F F - - - F F F - - 0
 - F F F F F F - F - A -
 - F F - - - F F - A A A
 F F - C C - - F - - A A
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [1G] [1B] [6A] [5B] [4B] | C:3 F:9
P5975_Joe | $6800 | [2I] [1D] [3I] [4I] [10F] | A:2 C:7 F:3

P5975_Joe [Choose Tile: [2I] [1D] [3I] [4I] [10F]]
`;

exports[`Game Play > (155) Player 5975_Joe places tile [10F] 1`] = `
 - - 0 - 0 - - - 0 - 0 -
 - - - - - 0 - - - 0 - -
 F F F - - - F F F - - 0
 - F F F F F F - F - C -
 - F F - - - F F - C C C
 F F - C C - - F - C C C
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [1G] [1B] [6A] [5B] [4B] | C:3 F:9
P5975_Joe | $17300 | [2I] [1D] [3I] [4I] | A:2 C:7 F:3

P5975_Joe [Sell (1/2) American Share] [Keep (1/2) American Share] [Trade (2/2) American for 1 Continental]
`;

exports[`Game Play > (156) Player 5975_Joe trades 2 American -> Continental 1`] = `
 - - 0 - 0 - - - 0 - 0 -
 - - - - - 0 - - - 0 - -
 F F F - - - F F F - - 0
 - F F F F F F - F - C -
 - F F - - - F F - C C C
 F F - C C - - F - C C C
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [1G] [1B] [6A] [5B] [4B] | C:3 F:9
P5975_Joe | $17300 | [2I] [1D] [3I] [4I] | C:8 F:3

P5975_Joe [Choose Shares: C F] [End Turn] [End Game]
`;

exports[`Game Play > (157) Player 5975_Joe ends turn 1`] = `
 - - 0 - 0 - - - 0 - 0 -
 - - - - - 0 - - - 0 - -
 F F F - - - F F F - - 0
 - F F F F F F - F - C -
 - F F - - - F F - C C C
 F F - C C - - F - C C C
 - F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [1G] [1B] [6A] [5B] [4B] | C:3 F:9
P5975_Joe | $17300 | [2I] [1D] [3I] [4I] [12I] | C:8 F:3

P3658_Nate [Choose Tile: [1G] [1B] [6A] [5B] [4B]]
`;

exports[`Game Play > (158) Player 3658_Nate places tile [1G] 1`] = `
 - - 0 - 0 - - - 0 - 0 -
 - - - - - 0 - - - 0 - -
 F F F - - - F F F - - 0
 - F F F F F F - F - C -
 - F F - - - F F - C C C
 F F - C C - - F - C C C
 F F - C C C C - C C - -
 - - - C C - C C C C C -
 0 - - - C C C - C - C -

P3658_Nate | $26200 | [1B] [6A] [5B] [4B] | C:3 F:9
P5975_Joe | $17300 | [2I] [1D] [3I] [4I] [12I] | C:8 F:3

P3658_Nate [Choose Shares: C F] [End Turn] [End Game]
`;
